Fix alignment.
Chose to align the bottom and fix for the logo. Trying to `vertical-align` to
the center makes it look awful due to our logo not being vertically symmetrical
:(

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -6,15 +6,20 @@ $footeHPadding: 96px;
     overflow: hidden;
     border-top: 1px solid $lineColorBlueLight;
 
+    .footer-item {
+        vertical-align: bottom;
+    }
+
     .logoContainer {
         display: inline-block;
         float: left;
+        margin-top: -3px; // Make it look align with the rest of the footer.
     }
 
     .copyright {
         @include textSmall(condensed);
         display: inline-block;
-        margin: 0 auto;
+        margin: inherit auto;
     }
 
     .logo {
